implementations/rust/ockam/ockam/tests/node_test/fail_if_more_than_one_arg.stderr
error: the function must have exactly one argument
 --> $DIR/fail_if_more_than_one_arg.rs:4:7
  |
4 | async fn my_test(mut c: ockam_node::Context, _x: u64) -> ockam_core::Result<()> {
  |       ^^
